# dyna_sw_update_arch

./: .clang-format  .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt  IFunction.cc  IFunction.h  IFunctionPtr.cc  IObject.h  UpdateLoader.cc  UpdateableObject.cc  dyn_update.cc  dyn_update.h  reflection.cc
lib/include/: IFunction.h  IFunctionPtr.h  IObject.h  UpdateInfo.h  UpdateLoader.h  dyn_update.h  reflection.h
metagen/: metadata-in.cc  metagen.py
tests/: CMakeLists.txt  sharedlib_test.cc  test_access.cc  test_loading.cc  test_structure_changes.h
